# PractRand

./: .gitignore  CMakeLists.txt  README.md
.reuse/: dep5
src/: test_batteries.cpp  tests.cpp
tools/: RNG_from_name.h  RNG_test.cpp
